config/vm/maintenance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintenance
spec:
  ingressClassName: nginx
  rules:
    - host: maintenance.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance
                port:
                  number: 8080
